--- a/Vienna/Interfaces/mul.lproj/ActivityViewer.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/ActivityViewer.xcstrings
@@ -56,7 +56,7 @@
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Finestra Attività"
+            "value" : "Attività"
           }
         },
         "ja" : {
