--- a/Vienna/Interfaces/mul.lproj/FeedCredentials.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/FeedCredentials.xcstrings
@@ -740,7 +740,7 @@
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione."
+            "value" : "Nome utente e password saranno ricordati la prossima volta che aggiornerai questa iscrizione."
           }
         },
         "ja" : {
@@ -860,7 +860,7 @@
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Collegamento:"
+            "value" : "Indirizzo:"
           }
         },
         "lt" : {
